initial commit with horizontal scroll bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,7 @@
 /*-----------------------------------
     1 - Header
 ------------------------------------*/
-* {
-  outline: 1px solid red;
 
-
-}
 header {
   background-color: #2c3e5096;
   color: #fff;
